--- a/index.html
+++ b/index.html
@@ -2650,14 +2650,13 @@ height="45"
                 class="inline-block max-w-[160px] mb-6"
               >
                 <img
-                  src="assets/images/logo/logo-white.svg"
+                  src="assets/images/logo/logo-arda-works-white.svg"
                   alt="logo"
                   class="max-w-full"
                 />
               </a>
               <p class="text-base text-[#f3f4fe] mb-7">
-                We create digital experiences for brands and companies by using
-                technology.
+                We create digital experiences for brands and companies by using technology.
               </p>
               <div class="flex items-center -mx-3">
                 <a
@@ -3090,7 +3089,7 @@ height="45"
                 <p class="text-base text-[#f3f4fe]">
                   Designed and Developed by
                   <a
-                    href="https://tailgrids.com"
+                    href="https://ardaworks.id"
                     rel="nofollow noopner"
                     target="_blank"
                     class="text-primary hover:underline"
