update logo and partner

--- a/index.html
+++ b/index.html
@@ -2029,7 +2029,7 @@ height="45"
         </div>
 
         <div class="flex flex-wrap">
-          <div class="w-full md:w-1/2 lg:w-1/3 px-4">
+          <div class="w-full md:w-1/2 lg:w-1/2 px-4">
             <div
               class="
                 ud-single-testimonial
@@ -2133,7 +2133,7 @@ height="45"
               </div>
             </div>
           </div>
-          <div class="w-full md:w-1/2 lg:w-1/3 px-4">
+          <div class="w-full md:w-1/2 lg:w-1/2 px-4">
             <div
               class="
                 ud-single-testimonial
@@ -2211,8 +2211,7 @@ height="45"
               </div>
               <div class="ud-testimonial-content mb-6">
                 <p class="text-base tracking-wide text-body-color">
-                  “Our members are so impressed. It's intuitive. It's clean.
-                  It's distraction free. If you're building a community.
+                  “Ardaworks help us to manage all inventory each city and aggreagate the payment make us easier to manage client and ledger.
                 </p>
               </div>
               <div class="ud-testimonial-info flex items-center">
@@ -2227,118 +2226,13 @@ height="45"
                   "
                 >
                   <img
-                    src="assets/images/testimonials/author-02.png"
+                    src="https://media.licdn.com/dms/image/C5603AQFRm2rQx_pEyQ/profile-displayphoto-shrink_100_100/0/1516976589086?e=1686787200&v=beta&t=zLmenUPnzXH63MWQq0_GIimDxlvcc0Lfr8bWLagtvFk"
                     alt="author"
                   />
                 </div>
                 <div class="ud-testimonial-meta">
-                  <h4 class="text-sm font-semibold">Margin Gesmu</h4>
-                  <p class="text-[#969696] text-xs">Founder @ UI Hunter</p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="w-full md:w-1/2 lg:w-1/3 px-4">
-            <div
-              class="
-                ud-single-testimonial
-                p-8
-                bg-white
-                mb-12
-                shadow-testimonial
-                wow
-                fadeInUp
-              "
-              data-wow-delay=".2s
-              "
-            >
-              <div class="ud-testimonial-ratings flex items-center mb-3">
-                <span class="text-[#fbb040] mr-1">
-                  <svg
-                    width="18"
-                    height="16"
-                    viewBox="0 0 18 16"
-                    class="fill-current"
-                  >
-                    <path
-                      d="M9.09815 0.360596L11.1054 6.06493H17.601L12.3459 9.5904L14.3532 15.2947L9.09815 11.7693L3.84309 15.2947L5.85035 9.5904L0.595291 6.06493H7.0909L9.09815 0.360596Z"
-                    />
-                  </svg>
-                </span>
-                <span class="text-[#fbb040] mr-1">
-                  <svg
-                    width="18"
-                    height="16"
-                    viewBox="0 0 18 16"
-                    class="fill-current"
-                  >
-                    <path
-                      d="M9.09815 0.360596L11.1054 6.06493H17.601L12.3459 9.5904L14.3532 15.2947L9.09815 11.7693L3.84309 15.2947L5.85035 9.5904L0.595291 6.06493H7.0909L9.09815 0.360596Z"
-                    />
-                  </svg>
-                </span>
-                <span class="text-[#fbb040] mr-1">
-                  <svg
-                    width="18"
-                    height="16"
-                    viewBox="0 0 18 16"
-                    class="fill-current"
-                  >
-                    <path
-                      d="M9.09815 0.360596L11.1054 6.06493H17.601L12.3459 9.5904L14.3532 15.2947L9.09815 11.7693L3.84309 15.2947L5.85035 9.5904L0.595291 6.06493H7.0909L9.09815 0.360596Z"
-                    />
-                  </svg>
-                </span>
-                <span class="text-[#fbb040] mr-1">
-                  <svg
-                    width="18"
-                    height="16"
-                    viewBox="0 0 18 16"
-                    class="fill-current"
-                  >
-                    <path
-                      d="M9.09815 0.360596L11.1054 6.06493H17.601L12.3459 9.5904L14.3532 15.2947L9.09815 11.7693L3.84309 15.2947L5.85035 9.5904L0.595291 6.06493H7.0909L9.09815 0.360596Z"
-                    />
-                  </svg>
-                </span>
-                <span class="text-[#fbb040] mr-1">
-                  <svg
-                    width="18"
-                    height="16"
-                    viewBox="0 0 18 16"
-                    class="fill-current"
-                  >
-                    <path
-                      d="M9.09815 0.360596L11.1054 6.06493H17.601L12.3459 9.5904L14.3532 15.2947L9.09815 11.7693L3.84309 15.2947L5.85035 9.5904L0.595291 6.06493H7.0909L9.09815 0.360596Z"
-                    />
-                  </svg>
-                </span>
-              </div>
-              <div class="ud-testimonial-content mb-6">
-                <p class="text-base tracking-wide text-body-color">
-                  “Our members are so impressed. It's intuitive. It's clean.
-                  It's distraction free. If you're building a community.
-                </p>
-              </div>
-              <div class="ud-testimonial-info flex items-center">
-                <div
-                  class="
-                    ud-testimonial-image
-                    w-[50px]
-                    h-[50px]
-                    rounded-full
-                    overflow-hidden
-                    mr-5
-                  "
-                >
-                  <img
-                    src="assets/images/testimonials/author-03.png"
-                    alt="author"
-                  />
-                </div>
-                <div class="ud-testimonial-meta">
-                  <h4 class="text-sm font-semibold">William Smith</h4>
-                  <p class="text-[#969696] text-xs">Founder @ Trorex</p>
+                  <h4 class="text-sm font-semibold">Arie Prasetyo</h4>
+                  <p class="text-[#969696] text-xs">Founder @candatawa_project</p>
                 </div>
               </div>
             </div>
