update logo and partner

--- a/index.html
+++ b/index.html
@@ -2021,8 +2021,7 @@ height="45"
                   text-body-color
                 "
               >
-                There are many variations of passages of Lorem Ipsum available
-                but the majority have suffered alteration in some form.
+              We pride ourselves on providing an exceptional service to our clients, but you don’t just have to take our word for it. Read what our clients have to say about working with us.
               </p>
             </div>
           </div>
