--- a/index.html
+++ b/index.html
@@ -201,8 +201,7 @@
               </div>
               <h4 class="font-bold text-xl text-dark mb-3">Memancing</h4>
               <p class="text-body-color mb-8 lg:mb-11">
-                Technical advances in monitoring and predicting political risk
-                were necessary. To that end,
+                Teknik yang kami gunakan salah satunya adalah memancing, dikarenakan beberapa ikan tinggal di karang laut dalam dengan kedalaman mulai dari 40 meter hingga 300 meter
               </p>
             </div>
           </div>
@@ -234,9 +233,7 @@
               </div>
               <h4 class="font-bold text-xl text-dark mb-3">Pengemasan</h4>
               <p class="text-body-color mb-8 lg:mb-11">
-                ArdaWorks provides research services for various groups with an
-                interest in public opinion, especially those related to
-                political contestations such as national and regional elections
+                Produk makanan beku membutuhkan ruang hampa udara untuk mempertahankan kualitas produk. Hal ini tentu tidak mudah mengingat begitu banyak peluang, sekecil apa pun, untuk bakteri atau kontaminan luar masuk ke kemasan.
               </p>
             </div>
           </div>
@@ -304,9 +301,7 @@
               </div>
               <h4 class="font-bold text-xl text-dark mb-3">Distribusi</h4>
               <p class="text-body-color mb-8 lg:mb-11">
-                Reliable, comprehensive credit scoring. Harness the power of
-                user financial and alternative data for innovative, credit
-                scoring capabilities.
+                Kami memiliki beberapa titik distribusi untuk produk-produk kami untuk memenuhi pengiriman yang cepat dan tepat waktu, seperti Malang, Surabaya dan Jakarta
               </p>
             </div>
           </div>
@@ -333,30 +328,24 @@
                   <span
                     class="text-sm font-medium text-white py-2 px-5 bg-primary inline-block mb-5"
                   >
-                    Why We’re Here
+                    Kenapa Kami disini
                   </span>
                   <h2
                     class="font-bold text-3xl sm:text-4xl 2xl:text-[40px] sm:leading-snug text-dark mb-6"
                   >
-                    We believe in augmenting human intelligence, not replacing
-                    it.
+                  Kami percaya bahwa laut sebagai sumber kehidupan yang lebih baik untuk semua.
                   </h2>
                   <p class="text-base text-body-color mb-9 leading-relaxed">
-                    With good data and the right technology, people and
-                    institutions today can still solve hard problems and change
-                    the world for the better.
+                    Indonesia merupakan negara kepulauan terbesar di dunia yang memiliki potensi untuk menjadi Poros Maritim Dunia. Poros Maritim Dunia bertujuan menjadikan Indonesia sebagai negara maritim yang besar, kuat, dan makmur melalui pengembalian identitas Indonesia sebagai bangsa maritim, pengamanan kepentingan dan keamanan maritim, memberdayakan potensi maritim untuk mewujudkan pemerataan ekonomi Indonesia.
                   </p>
                   <p class="text-base text-body-color mb-9 leading-relaxed">
-                    We saw automated approaches that failed against adaptive
-                    adversaries, and all-or-nothing access controls that forced
-                    organizations to make unacceptable trade-offs between
-                    collaborating and securing sensitive data from misuse.
+                    Untuk menuju negara Poros Maritim Dunia akan meliputi pembangunan proses maritim dari aspek infrastruktur, politik, sosial-budaya, hukum, keamanan,dan ekonomi. Penegakkan kedaulatan wilayah laut NKRI, revitalisasi sektor-sektor ekonomi kelautan, penguatan dan pengembangan konektivitas maritim, rehabilitasi kerusakan lingkungan dan konservasi biodiversity, serta peningkatan kualitas dan kuantitas SDM kelautan, merupakan program-program utama dalam upaya mewujudkan Indonesia sebagai poros maritim dunia .
                   </p>
                 </div>
                 <div class="text-center">
                   <div class="relative inline-block z-10">
                     <img
-                      src="assets/images/about/about-image.svg"
+                      src="assets/images/about/fish.png"
                       alt="image"
                       class="mx-auto lg:ml-auto"
                     />
