--- a/index.html
+++ b/index.html
@@ -78,6 +78,14 @@
                       href="#about"
                       class="ud-menu-scroll text-base text-dark lg:text-white lg:group-hover:opacity-70 lg:group-hover:text-white group-hover:text-primary py-2 lg:py-6 lg:inline-flex lg:px-0 flex mx-8 lg:mr-0 lg:ml-7 xl:ml-12 font-semibold drop-shadow-sm"
                     >
+                      Sustainability
+                    </a>
+                  </li>
+                  <li class="relative group">
+                    <a
+                      href="#about"
+                      class="ud-menu-scroll text-base text-dark lg:text-white lg:group-hover:opacity-70 lg:group-hover:text-white group-hover:text-primary py-2 lg:py-6 lg:inline-flex lg:px-0 flex mx-8 lg:mr-0 lg:ml-7 xl:ml-12 font-semibold drop-shadow-sm"
+                    >
                       Tentang Kami
                     </a>
                   </li>
