--- a/index.html
+++ b/index.html
@@ -86,6 +86,14 @@
                       href="#about"
                       class="ud-menu-scroll text-base text-dark lg:text-white lg:group-hover:opacity-70 lg:group-hover:text-white group-hover:text-primary py-2 lg:py-6 lg:inline-flex lg:px-0 flex mx-8 lg:mr-0 lg:ml-7 xl:ml-12 font-semibold drop-shadow-sm"
                     >
+                      Produk Kami
+                    </a>
+                  </li>
+                  <li class="relative group">
+                    <a
+                      href="#about"
+                      class="ud-menu-scroll text-base text-dark lg:text-white lg:group-hover:opacity-70 lg:group-hover:text-white group-hover:text-primary py-2 lg:py-6 lg:inline-flex lg:px-0 flex mx-8 lg:mr-0 lg:ml-7 xl:ml-12 font-semibold drop-shadow-sm"
+                    >
                       Tentang Kami
                     </a>
                   </li>
@@ -265,6 +273,77 @@
         </div>
       </div>
     </section>
+
+    <section class="pt-20 lg:pt-[60px] pb-8 lg:pb-[70px]">
+      <div class="container">
+        <div class="flex flex-wrap -mx-4">
+          <div class="w-full px-4">
+            <div class="mb-12 lg:mb-20 max-w-[620px]">
+              <span class="font-semibold text-lg text-primary mb-2 block">
+                Produk
+              </span>
+              <h2
+                class="font-bold text-3xl sm:text-4xl md:text-[42px] text-dark mb-4"
+              >
+              Kategori Produk Seafood
+              </h2>
+              <p
+                class="text-lg sm:text-xl leading-relaxed sm:leading-relaxed text-body-color"
+              >
+              Kami distributor frozen seafood menjual Kepiting,ikan,udang dan lobster laut fresh / segar dengan harga terbaik dan terjangkau, banyak promo menarik pembelian frozen seafood
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="flex flex-wrap -mx-4">
+          <div class="w-full md:w-1/4 lg:w-1/4 px-4">
+            <div class="relative inline-block z-10">
+              <img
+                src="assets/images/hero/ikan.png"
+                alt="image"
+                width="300"
+                class="mx-auto lg:ml-auto"
+              />
+              <center>Ikan Laut Segar</center>
+            </div>
+          </div>
+          <div class="w-full md:w-1/4 lg:w-1/4 px-4">
+            <div class="relative inline-block z-10">
+              <img
+                src="assets/images/hero/kepiting.png"
+                alt="image"
+                width="300"
+                class="mx-auto lg:ml-auto"
+              />
+              <center>Kepiting Dan Hewan bercangkang</center>
+            </div>
+          </div>
+          <div class="w-full md:w-1/4 lg:w-1/4 px-4">
+            <div class="relative inline-block z-10">
+              <img
+                src="assets/images/hero/udang.png"
+                alt="image"
+                width="300"
+                class="mx-auto lg:ml-auto"
+              />
+            </div>
+            <center>Udang Dan Cumi</center>
+          </div>
+          <div class="w-full md:w-1/4 lg:w-1/4 px-4">
+            <div class="relative inline-block z-10">
+              <img
+                src="assets/images/hero/olahan-laut.png"
+                alt="image"
+                width="300"
+                class="mx-auto lg:ml-auto"
+              />
+              <center>Fillet Ikan dan Makanan Laut Olahan</center>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- ====== Features Section End -->
 
     <!-- ====== About Section Start -->
