--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                   </li>
                   <li class="relative group">
                     <a
-                      href="#about"
+                      href="#product"
                       class="ud-menu-scroll text-base text-dark lg:text-white lg:group-hover:opacity-70 lg:group-hover:text-white group-hover:text-primary py-2 lg:py-6 lg:inline-flex lg:px-0 flex mx-8 lg:mr-0 lg:ml-7 xl:ml-12 font-semibold drop-shadow-sm"
                     >
                       Produk Kami
@@ -274,7 +274,7 @@
       </div>
     </section>
 
-    <section class="pt-20 lg:pt-[60px] pb-8 lg:pb-[70px]">
+    <section id="product"class="pt-20 lg:pt-[60px] pb-8 lg:pb-[70px]">
       <div class="container">
         <div class="flex flex-wrap -mx-4">
           <div class="w-full px-4">
