--- a/index.html
+++ b/index.html
@@ -394,14 +394,8 @@
       </div>
     </section>
 
-    <!-- ====== About Section End -->
+    <hr class="w-48 h-1 mx-auto my-4 bg-gray-100 border-0 rounded md:my-10 dark:bg-gray-700">
 
-    <!-- ====== Pricing Section End -->
-
-    <!-- ====== Faq Section Start -->
-    <!-- ====== Faq Section End -->
-
-    <!-- ====== Testimonials Start ====== -->
     <section id="testimonials" class="pt-20 md:pt-[120px]">
       <div class="container px-4">
         <div class="flex flex-wrap">
