--- a/index.html
+++ b/index.html
@@ -687,13 +687,13 @@
           <div class="px-4 w-full lg:w-7/12 xl:w-8/12">
             <div class="ud-contact-content-wrapper">
               <div class="ud-contact-title mb-12 lg:mb-[150px]">
-                <span class="text-dark font-semibold text-base mb-5">
-                  CONTACT US
-                </span>
+
                 <h2 class="text-[35px] font-semibold">
-                  Let's talk about <br />
-                  Love to hear from you!
+                  Hej! Apa yang bisa kami bantu?
                 </h2>
+                <span class="text-dark font-semibold text-base mb-5">
+                  Kami siap mendengarkan masukan atau pertanyaan Anda. Anda dapat menghubungi kami melalui formulir dibawah. Tim kami akan segera menghubungi Anda pada jam kerja.
+                </span>
               </div>
               <div class="flex flex-wrap justify-between mb-12 lg:mb-0">
                 <div class="flex max-w-full w-[330px] mb-8">
@@ -750,13 +750,10 @@
               data-wow-delay=".2s
               "
             >
-              <h3 class="font-semibold mb-8 text-2xl md:text-[26px]">
-                Send us a Message
-              </h3>
               <form action="https://formspree.io/f/moqrekro" method="POST">
                 <div class="mb-6">
                   <label for="fullName" class="block text-xs text-dark"
-                    >Full Name*</label
+                    >Nama Anda*</label
                   >
                   <input
                     type="text"
@@ -778,7 +775,18 @@
                 </div>
                 <div class="mb-6">
                   <label for="phone" class="block text-xs text-dark"
-                    >Phone*</label
+                    >Nomor Handphone*</label
+                  >
+                  <input
+                    type="text"
+                    name="phone"
+                    placeholder="+885 1254 5211 552"
+                    class="w-full border-0 border-b border-[#f1f1f1] focus:border-primary focus:outline-none py-4"
+                  />
+                </div>
+                <div class="mb-6">
+                  <label for="phone" class="block text-xs text-dark"
+                    >Tipe Bisnis*</label
                   >
                   <input
                     type="text"
@@ -824,9 +832,7 @@
                 <img src="assets/images/logo/white.png" alt="logo" class="max-w-full">
               </a>
               <p class="text-base text-[#f3f4fe] mb-7">
-                Perusahaan Penangkapan Ikan Indonesia. Laut sebagai sumber kehidupan yang lebih baik untuk semua, baik nelayan maupun sekitar pantai/ laut
-
-
+                Perusahaan Penangkapan Ikan Indonesia. Laut sebagai sumber kehidupan yang lebih baik untuk semua, baik nelayan maupun sekitar pantai/ laut.
               </p>
               <div class="flex items-center -mx-3">
                 <a href="javascript:void(0)" class="px-3 text-[#dddddd] hover:text-white">
@@ -1014,7 +1020,7 @@
               <h4 class="text-white text-lg font-semibold mb-9">Partners</h4>
               <ul class="flex flex-wrap items-center">
                 <li>
-                  <a href="https://tailgrids.com" rel="nofollow noopner" target="_blank" class="
+                  <a href="https://ardaworks.id" rel="nofollow noopner" target="_blank" class="
                       block
                       mb-6
                       mr-5
@@ -1022,11 +1028,11 @@
                       xl:max-w-[100px]
                       2xl:max-w-[120px]
                     ">
-                    <img src="assets/images/footer/brands/tailgrids.svg" alt="tailgrids">
+                    <img src="https://ardaworks.id/assets/images/logo/logo-arda-works-white.svg" alt="ardaworks">
                   </a>
                 </li>
                 <li>
-                  <a href="https://ayroui.com" rel="nofollow noopner" target="_blank" class="
+                  <a href="https://ardaworks.id" rel="nofollow noopner" target="_blank" class="
                       block
                       mb-6
                       mr-5
@@ -1034,57 +1040,11 @@
                       xl:max-w-[100px]
                       2xl:max-w-[120px]
                     ">
-                    <img src="assets/images/footer/brands/ayroui.svg" alt="ayroui">
+                    <img src="assets/images/footer/kkp.png" alt=" KKP">
                   </a>
                 </li>
-                <li>
-                  <a href="https://ecommercehtml.com" rel="nofollow noopner" target="_blank" class="
-                      block
-                      mb-6
-                      mr-5
-                      max-w-[120px]
-                      xl:max-w-[100px]
-                      2xl:max-w-[120px]
-                    ">
-                    <img src="assets/images/footer/brands/ecommerce-html.svg" alt="ecommerce-html">
-                  </a>
-                </li>
-                <li>
-                  <a href="https://graygrids.com" rel="nofollow noopner" target="_blank" class="
-                      block
-                      mb-6
-                      mr-5
-                      max-w-[120px]
-                      xl:max-w-[100px]
-                      2xl:max-w-[120px]
-                    ">
-                    <img src="assets/images/footer/brands/graygrids.svg" alt="graygrids">
-                  </a>
-                </li>
-                <li>
-                  <a href="https://lineicons.com" rel="nofollow noopner" target="_blank" class="
-                      block
-                      mb-6
-                      mr-5
-                      max-w-[120px]
-                      xl:max-w-[100px]
-                      2xl:max-w-[120px]
-                    ">
-                    <img src="assets/images/footer/brands/lineicons.svg" alt="lineicons">
-                  </a>
-                </li>
-                <li>
-                  <a href="https://uideck.com" rel="nofollow noopner" target="_blank" class="
-                      block
-                      mb-6
-                      mr-5
-                      max-w-[120px]
-                      xl:max-w-[100px]
-                      2xl:max-w-[120px]
-                    ">
-                    <img src="assets/images/footer/brands/uideck.svg" alt="uideck">
-                  </a>
-                </li>
+
+               
               </ul>
             </div>
           </div>
