--- a/index.html
+++ b/index.html
@@ -713,7 +713,7 @@
                     </svg>
                   </div>
                   <div>
-                    <h5 class="text-lg font-semibold mb-6">Our Location</h5>
+                    <h5 class="text-lg font-semibold mb-6">Lokasi Kami</h5>
                     <p class="text-base text-body-color">
                       Terusan Rasuna Said 20, Jakarta Selatan Indonesia, South
                       East Asia
@@ -788,13 +788,13 @@
                   <label for="phone" class="block text-xs text-dark"
                     >Tipe Bisnis*</label
                   >
-                  <input
-                    type="text"
-                    name="phone"
-                    placeholder="+885 1254 5211 552"
-                    class="w-full border-0 border-b border-[#f1f1f1] focus:border-primary focus:outline-none py-4"
-                  />
+                  <select required id="countries" class="w-full border-0 border-b border-[#f1f1f1] focus:border-primary focus:outline-none py-4">
+                    <option selected >Pilih Tipe bisnis</option>
+                    <option value="US">Individu</option>
+                    <option value="CA">Perusahaan</option>
+                  </select>
                 </div>
+                
                 <div class="mb-6">
                   <label for="message" class="block text-xs text-dark"
                     >Message*</label
@@ -811,7 +811,7 @@
                     type="submit"
                     class="inline-flex items-center justify-center py-4 px-6 rounded text-white bg-primary text-base font-medium hover:bg-dark transition duration-300 ease-in-out"
                   >
-                    Send Message
+                    Kirim Pesan
                   </button>
                 </div>
               </form>
